Lazy henting av data som ikke er direkte fra behandling fra fpsak